css/app.css
/* ... */
.menuOverlay + .mainWrapper { margin-left: 60px; }

.menuInline ul,
.menuOverlay ul,
.blogMasonry,
.postList,
.portfolio,
.commentList ul,
.portfolioMeta { list-style: none; }

.is-accordion-submenu-parent > a::after {
  content: '+';
  right: 0;
  border: none;
  margin-top: 0;
  top: 10px;
}

.is-accordion-submenu-parent[aria-expanded=true] > a::after {
  content: '-';
  -ms-transform: none;
      transform: none;
}

.errorBox {
  height: 500px;
  position: relative;
}

.errorType p {
  font-size: 6rem;
  position: absolute;
  left: 2rem;
  bottom: 1rem;
  line-height: 1;
  letter-spacing: -6px;
}

/* parallaxify styles */

html { height: 100%; }
body { height: 100%; }

.js-Parallaxify {
  position: relative;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
}

/* stretch body child for wow effect*/
body > .js-Parallaxify { background-size: cover; }

/* for "hoverable" child, see rules below (that use absolute) */
.js-Parallaxify > * { position: relative; }

.js-Parallaxify > .js-Parallaxify {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

/* Title & Page Title
-----------------------------------------------------------------*/
.title,
.titleCenter {
  margin-bottom: 25px;
  position: relative;
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 1px;
  font-size: 1.5rem;
  display: inline-block;
}

.title::before,
.titleCenter::after {
  display: block;
  content: '';
  position: absolute;
  width: 60px;
  height: 2px;
  background: rgba(21, 21, 21, 1);
  top: 14px;
  left: 110%;
}

.titleCenter {
  text-align: center;
  display: block;
  margin-bottom: 110px;
}

.pageTitle span {
  position: relative;
  display: block;
  text-align: center;
  font-size: 2rem;
}

.pageTitle::after,
.pageTitle::before,
.titleCenter::after {
  display: block;
  content: '';
  position: absolute;
  width: 5rem;
  height: 2px;
  background: rgba(21, 21, 21, 1);
  left: 50%;
  margin-left: -40px;
  margin-top: 1rem;
}

.pageTitle::before,
.titleCenter::after {
  width: 2px;
  height: 110px;
  top: -80px;
  margin: 0;
}

.titleCenter::after {
  height: 60px;
  top: 145%;
}

.bgColor .pageTitle,
.bgBlack .pageTitle { color: rgba(255, 255, 255, 1); }

.bgBlack .title::before,
.bgColor .title::before,
.bgColor .pageTitle::after,
.bgBlack .pageTitle::after,
.bgColor .pageTitle::before,
.bgBlack .pageTitle::before,
.bgBlack .titleCenter::after,
.bgColor .titleCenter::after { background: rgba(255, 255, 255, 1); }


/* Burger Icon Styles - Mobile
---------------------------------------------------------------*/
#menuIcon {
  width: 80px;
  height: 79px;
  padding: 0;
  margin: 0;
  position: relative;
  display: block;
  float: right;
  -ms-transform: rotate(0deg);
      transform: rotate(0deg);
  transition: .5s ease-in-out;
  cursor: pointer;
  z-index: 90;
  background-color: white;
}

#menuIcon span {
  display: block;
  position: absolute;
  height: 2px;
  width: 22px;
  margin: auto;
  background: rgba(21, 21, 21, 1);;
  opacity: 1;
  -ms-transform: rotate(0deg);
      transform: rotate(0deg);
  transition: 250ms ease-in-out;
}

#menuIcon span:nth-child(1) { top: 32px; }

#menuIcon span:nth-child(2) { top: 38px; }

#menuIcon span:nth-child(3) { top: 44px; }

#menuIcon:hover span:nth-child(1) { top: 30px; }

#menuIcon:hover span:nth-child(3) { top: 46px; }

#menuIcon.open span:nth-child(1),
#menuIcon.open span:nth-child(3) { top: 38px; }

#menuIcon.open span:nth-child(1) {
  -ms-transform: rotate(135deg);
      transform: rotate(135deg);
}

#menuIcon.open span:nth-child(2) {
  opacity: 0;
  left: -60px;
}

#menuIcon.open span:nth-child(3) {
  -ms-transform: rotate(-135deg);
      transform: rotate(-135deg);
}


/* Top Bar with Inline Hidden Links - Mobile
---------------------------------------------------------------*/
.menuBar {
  height: 80px;
  background: rgba(255, 255, 255, 1);
  border-bottom: 1px solid rgba(21, 21, 21, 0.05);
}

.menuBar #logo {
  display: inline-block;
  line-height: 80px;
  font-size: 1.625rem;
}

.menuBar #menuIcon span { left: 28px; }

.menuInline {
  position: fixed;
  min-width: 280px;
  max-width: 75%;
  height: auto;
  min-height: 100%;
  top: 0;
  right: 0;
  background: rgba(255, 255, 255, 1);
  z-index: 10;
}

#menuIcon + .menuInline {
  width: 0;
  right: -200px;
  -ms-transform: translateX(80px) translateZ(0);
  transform: translateX(80px) translateZ(0);
  transition: transform 300ms ease-in-out, all 300ms ease-in-out;
}

#menuIcon.open + .menuInline {
  width: 25%;
  right: 0;
  -ms-transform: translateX(0) translateZ(0);
  transform: translateX(0) translateZ(0);
  zoom: 1;
}

.menuInline ul { margin: 0; }

.menuInline > ul {
  width: 100%;
  display: block;
  padding: 4rem 0 4rem 1.5rem;
}

.menuInline ul,
.menuInline ul li,
.menuOverlay ul li { position: relative; }

.menuInline ul > li,
.menuOverlay ul > li {
  display: block;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.22rem;
}

.menuInline ul > li.navLink a { padding: 0.5rem 1rem; }

.menuInline > ul li.navLink:last-child,
.menuOverlay ul li.navLink:last-child { margin-top: 2rem; }

.menuInline.classic > ul li.navLink:last-child { margin-top: 0; }

.menuInline ul li.navLink > a:not([class="navIcon"]) {
  font-size: 1.25rem;
  display: block;
}

.menuInline ul li a.navIcon,
.menuOverlay ul li a.navIcon {
  width: 30px;
  display: inline-block;
}

.menuInline ul ul.subMenu {
  height: 100%;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.8s ease-in-out;
}

.menuInline ul li:hover > ul.subMenu { max-height: 1000px; }

.menuInline ul ul li,
.menuInline ul ul li a { display: block; }

.menuInline ul ul.subMenu li a { color: rgba(21, 21, 21, 0.7); }

.menuInline ul ul.subMenu li a:hover,
.menuInline a:hover { color: rgba(76, 72, 207, 1); }

.menuInline ul li.navLink > ul.subMenu li > a { padding: 6px 6px 6px 30px; }
/* ... */

